# random-quotes-generator-package

./: README.md  pyproject.toml
random_quotes_generator/: quotes.py  quotes.txt
tests/: tests.py
